src/objects/CD_Item_Categories__c.object
<CustomObject>
    <fields>
        <fullName>Commodity_Code_IOD_IN__c</fullName>
        <label>Commodity Code IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commodity Code</label>
        <referenceTo>CD_Categories__c</referenceTo>
        <relationshipLabel>CD Item Categories</relationshipLabel>
        <relationshipName>CD_Item_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Category_ID__c</fullName>
        <externalId>true</externalId>
        <label>Item Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_IOC__c</fullName>
        <formula>Item_Number__r.Item_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Number IOC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_IOD_IN__c</fullName>
        <label>Item Number IOD IN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Number</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD Item Categories</relationshipLabel>
        <relationshipName>CD_Item_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Buy_Flag__c</fullName>
        <label>Make Buy Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Code_IOD_IN__c</fullName>
        <label>Organization Code IOD IN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Code</label>
        <referenceTo>CD_Organizations__c</referenceTo>
        <relationshipLabel>CD Item Categories</relationshipLabel>
        <relationshipName>CD_Item_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CD Item Categories</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Item_Number__c</columns>
        <columns>Commodity_Code__c</columns>
        <columns>Item_Status__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Organization_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD Item Categories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Item Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>